Add new misc helpers function
Signed-off-by: Gabriel Fukushima <gabrielfukushima@gmail.com>